--- a/html/demo1/test.html
+++ b/html/demo1/test.html
@@ -16,8 +16,8 @@
 
     <img scr="http://pic.carnoc.com/file/210630/21063008573232.jpg" />
 
-    <div style="background-color: chocolate;margin: 20;">
-        <input type="text" />
+    <div style="background-color: chocolate;margin: 20;padding: 50;inline-size: 100;">
+        <input type="text" style="background-color: rgb(243, 235, 230);margin: 20;padding: 50;" />
     </div>
 </body>
 
